--- a/ebatis-sample/pom.xml
+++ b/ebatis-sample/pom.xml
@@ -34,7 +34,18 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--swagger2-->
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+     <!--   &lt;!&ndash;swagger2&ndash;&gt;
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -51,7 +62,7 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-        <!-- 引入swagger-bootstrap-ui包 /doc.html-->
+        &lt;!&ndash; 引入swagger-bootstrap-ui包 /doc.html&ndash;&gt;
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>swagger-bootstrap-ui</artifactId>
@@ -66,7 +77,7 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-models</artifactId>
             <version>1.5.22</version>
-        </dependency>
+        </dependency>-->
 
 
     </dependencies>
@@ -79,6 +90,13 @@
                 <version>${spring-boot.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-dependencies</artifactId>
+                <version>2.0.5</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
